--- a/res/values-fa/strings_pbap.xml
+++ b/res/values-fa/strings_pbap.xml
@@ -2,23 +2,24 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="pbap_acceptance_dialog_title">‏%1$s می‌خواهد به آشنایان و تاریخچه مکالمات شما دسترسی پیدا کند. این اجازه به  %2$s داده شود؟</string>
     <string name="pbap_acceptance_dialog_header">دسترسی به دفترچه تلفن</string>
-    <string name="pbap_session_key_dialog_title">رمز اتصال به %1$s را وارد نمایید.</string>
-    <string name="pbap_session_key_dialog_header">رمز اتصال بلوتوث مورد نیاز است.</string>
-    <string name="pbap_acceptance_timeout_message">انتظار برای تأیید اتصال به %1$s بیش از حد طول کشید.</string>
-    <string name="pbap_authentication_timeout_message">انتظار برای وارد کردن رمز اتصال به %1$s بیش از حد طول کشید.</string>
-    <string name="pbap_notif_ticker">درخواست دسترسی به دفترچه تلفن</string>
+    <string name="pbap_session_key_dialog_title">کلید اتصال به %1$s را وارد کنید.</string>
+    <string name="pbap_session_key_dialog_header">نیاز به کلید اتصال</string>
+    <string name="pbap_acceptance_timeout_message">تأیید اتصال به %1$s بیش از حد طول کشید.</string>
+    <string name="pbap_authentication_timeout_message">زمان وارد کردن کلید اتصال به %1$s بیش از حد طول کشید.</string>
+    <string name="pbap_notif_ticker">درخواست دسترسی به دفترچهٔ تلفن</string>
     <!-- Notification title when a Bluetooth device wants to pair with us -->
     <string name="pbap_notif_title">درخواست PBAP</string>
     <!-- Notification message when a Bluetooth device wants to pair with us -->
     <string name="pbap_notif_message">اجازهٔ دسترسی به دفترچه تلفن برای %1$s</string>
-    <string name="auth_notif_ticker">درخواست تأیید هویت آتکس</string>
+    <string name="auth_notif_ticker">درخواست تأیید هویت Obex</string>
     <!-- Notification title when a Bluetooth device wants to pair with us -->
-    <string name="auth_notif_title">گذرواژه اتصال</string>
+    <string name="auth_notif_title">کلید اتصال</string>
     <!-- Notification message when a Bluetooth device wants to pair with us -->
-    <string name="auth_notif_message">رمز اتصال به %1$s را وارد نمایید.</string>
+    <string name="auth_notif_message">کلید اتصال به %1$s را وارد کنید.</string>
     <string name="alwaysallowed">همیشه اجازه داده شود؟</string>
-    <string name="defaultname">کارکیت</string>
-    <string name="unknownName">نام ناشناس</string>
+    <string name="defaultname">نام دستگاه</string>
+    <string name="unknownName">ناشناس</string>
     <string name="localPhoneName">نام گوشی من</string>
-    <string name="defaultnumber">000000</string>
+    <!-- FIXME: (Reza) I'm not sure whether persian nums in the code would work correctly -->
+    <!--string name="defaultnumber">۰۰۰۰۰۰</string-->
 </resources>
